Fix a bug of PopupAlignmentDelegate on non-primary display

Previously, PopupAlignmentDelegate assumed the display's y-axis origin is 0. But it is not true in case of non-primary display which is not vertically aligned with the primary display. This patch makes PopupAlignmentDelegate consider such a non-primary display and fixes the issue.

BUG=662198
TEST=none

Review-Url: https://codereview.chromium.org/2472233002
Cr-Commit-Position: refs/heads/master@{#430126}

Former-commit-id: 6171d1a24ab95e88598cbd499cfd908b8819ecba