ash/common/system/web_notification/ash_popup_alignment_delegate.h
@@ -51,7 +51,7 @@ class ASH_EXPORT AshPopupAlignmentDelegate
   // Overridden from message_center::PopupAlignmentDelegate:
   int GetToastOriginX(const gfx::Rect& toast_bounds) const override;
   int GetBaseLine() const override;
-  int GetWorkAreaBottom() const override;
+  gfx::Rect GetWorkArea() const override;
   bool IsTopDown() const override;
   bool IsFromLeft() const override;
   void RecomputeAlignment(const display::Display& display) override;
