ui/message_center/views/desktop_popup_alignment_delegate.h
@@ -34,7 +34,7 @@ class MESSAGE_CENTER_EXPORT DesktopPopupAlignmentDelegate
   // Overridden from PopupAlignmentDelegate:
   int GetToastOriginX(const gfx::Rect& toast_bounds) const override;
   int GetBaseLine() const override;
-  int GetWorkAreaBottom() const override;
+  gfx::Rect GetWorkArea() const override;
   bool IsTopDown() const override;
   bool IsFromLeft() const override;
   void RecomputeAlignment(const display::Display& display) override;
